--- a/vignettes/metric-types.Rmd
+++ b/vignettes/metric-types.Rmd
@@ -55,7 +55,7 @@ metrics, along with the types of the inputs they take.
 
     - `turth` - Surv
     
-    - `estimate` - list of tibbles with `.time` and `.pred_survival` columns
+    - `estimate` - numeric
     
     - `censoring_weights` - numeric
     
