--- a/vignettes/metric-types.Rmd
+++ b/vignettes/metric-types.Rmd
@@ -59,7 +59,7 @@ metrics, along with the types of the inputs they take.
     
     - `censoring_weights` - numeric
     
-    - `.time` - numeric
+    - `eval_time` - numeric
 
 ## Example
 
