--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,8 @@ To install the package:
 install.packages("yardstick")
 
 # Development version:
-devtools::install_github("tidymodels/yardstick")
+# install.packages("pak")
+pak::pak("tidymodels/yardstick")
 ```
 
 ## Two class metric
