--- a/vignettes/grouping.Rmd
+++ b/vignettes/grouping.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-The 1.3.0 release of yardstick introduced an implementation for _group-wise metrics_. The use case motivating the implementation of this functionality is _fairness metrics_, though group-wise metrics have applications beyond that domain. Fairness metrics quantify the degree of disparity in a metric value across groups. To learn more about carrying out fairness-oriented analyses with tidymodels, see the blog post on the tidymodels website. This vignette will instead focus on group-wise metrics generally, clarifying the meaning of "group-wise" and demonstrating functionality with an example dataset.
+The 1.3.0 release of yardstick introduced an implementation for _groupwise metrics_. The use case motivating the implementation of this functionality is _fairness metrics_, though groupwise metrics have applications beyond that domain. Fairness metrics quantify the degree of disparity in a metric value across groups. To learn more about carrying out fairness-oriented analyses with tidymodels, see the blog post on the tidymodels website. This vignette will instead focus on groupwise metrics generally, clarifying the meaning of "groupwise" and demonstrating functionality with an example dataset.
 
 <!-- TODO: link to forthcoming tidymodels blog post -->
 
@@ -29,7 +29,7 @@ data("hpc_cv")
 
 # Group-awareness
 
-Even before the implementation of group-wise metrics, _all_ yardstick metrics had been _group-aware_. When grouped data is passed to a group-aware metric, it will return metric values calculated for each group.
+Even before the implementation of groupwise metrics, _all_ yardstick metrics had been _group-aware_. When grouped data is passed to a group-aware metric, it will return metric values calculated for each group.
 
 To demonstrate, we'll make use of the `hpc_cv` data set, containing class probabilities and class predictions for a linear discriminant analysis fit to the HPC data set of Kuhn and Johnson (2013). The model is evaluated via 10-fold cross-validation, and the predictions for all folds are included. 
 
@@ -72,9 +72,9 @@ Note that the first row, corresponding to `Fold01`, gives the same value as manu
 
 This behavior is what we mean by group-awareness. When grouped data is passed to group-aware metric functions, they will return values for each group.
 
-# Group-wise metrics
+# Groupwise metrics
 
-Group-wise metrics are associated with a data-column such that, when passed data with that column, the metric will temporarily group by that column, compute values for each of the groups defined by the column, and then aggregate the values computed for the temporary grouping back to the level of the input data's grouping.
+Groupwise metrics are associated with a data-column such that, when passed data with that column, the metric will temporarily group by that column, compute values for each of the groups defined by the column, and then aggregate the values computed for the temporary grouping back to the level of the input data's grouping.
 
 More concretely, let's turn to an example where there is no pre-existing grouping in the data. Consider the portion of the HPC data pertaining to the first resample:
 
@@ -101,7 +101,7 @@ Now, taking the difference:
 diff(c(acc_by_group$.estimate[2], acc_by_group$.estimate[1]))
 ```
 
-Group-wise metrics encode the `group_by()` and aggregation step (in this case, subtraction) shown above into a yardstick metric. We can define a new group-wise metric with the `new_groupwise_metric()` function:
+Groupwise metrics encode the `group_by()` and aggregation step (in this case, subtraction) shown above into a yardstick metric. We can define a new groupwise metric with the `new_groupwise_metric()` function:
 
 ```{r}
 accuracy_diff <-
@@ -158,7 +158,7 @@ hpc %>%
   acc_ms(truth = obs, estimate = pred)
 ```
 
-_Group-wise metrics are group-aware._ When passed data with any grouping variables other than the column passed as the first argument to `accuracy_diff()`---in this case, `group`---`accuracy_diff_by_batch()` will behave like any other yardstick metric. For example:
+_Groupwise metrics are group-aware._ When passed data with any grouping variables other than the column passed as the first argument to `accuracy_diff()`---in this case, `group`---`accuracy_diff_by_batch()` will behave like any other yardstick metric. For example:
 
 ```{r ex-acc-diff-by-batch-2}
 hpc %>% 
@@ -166,7 +166,7 @@ hpc %>%
   accuracy_diff_by_batch(obs, pred)
 ```
 
-Group-wise metrics form the backend of fairness metrics in tidymodels. To learn more about group-wise metrics and their applications in fairness problems, see `new_groupwise_metric()`.
+Groupwise metrics form the backend of fairness metrics in tidymodels. To learn more about groupwise metrics and their applications in fairness problems, see `new_groupwise_metric()`.
 
 <!-- TODO: link to tidyverse blog post and tidymodels articles. -->
 
