--- a/vignettes/metric-types.Rmd
+++ b/vignettes/metric-types.Rmd
@@ -54,11 +54,7 @@ metrics, along with the types of the inputs they take.
 
     - `truth` - Surv
 
-    - `estimate` - numeric
-
-    - `censoring_weights` - numeric
-
-    - `eval_time` - numeric
+    - `...` - list of data.frames, each containing the 3 columns `.eval_time`, `.pred_survival, and `.weight_censored`
 
 ## Example
 
