--- a/vignettes/metric-types.Rmd
+++ b/vignettes/metric-types.Rmd
@@ -50,7 +50,7 @@ metrics, along with the types of the inputs they take.
 
     - `estimate` - numeric
 
-5) **dynamic survival metrics**
+5) **Dynamic survival metrics**
 
     - `truth` - Surv
 
