--- a/vignettes/metric-types.Rmd
+++ b/vignettes/metric-types.Rmd
@@ -73,24 +73,24 @@ library(yardstick)
 library(dplyr)
 data("hpc_cv")
 
-hpc_cv %>%
-  group_by(Resample) %>%
+hpc_cv |>
+  group_by(Resample) |>
   slice(1:3)
 ```
 
 1 metric, 1 resample
 
 ```{r}
-hpc_cv %>%
-  filter(Resample == "Fold01") %>%
+hpc_cv |>
+  filter(Resample == "Fold01") |>
   accuracy(obs, pred)
 ```
 
 1 metric, 10 resamples
 
 ```{r}
-hpc_cv %>%
-  group_by(Resample) %>%
+hpc_cv |>
+  group_by(Resample) |>
   accuracy(obs, pred)
 ```
 
@@ -99,8 +99,8 @@ hpc_cv %>%
 ```{r}
 class_metrics <- metric_set(accuracy, kap)
 
-hpc_cv %>%
-  group_by(Resample) %>%
+hpc_cv |>
+  group_by(Resample) |>
   class_metrics(obs, estimate = pred)
 ```
 
